--- a/_posts/2023-03-31-INITIUM-记者手记-不想泡在尿水里-被困住的老年障碍者-也想要有尊严地活著.html
+++ b/_posts/2023-03-31-INITIUM-记者手记-不想泡在尿水里-被困住的老年障碍者-也想要有尊严地活著.html
@@ -10,28 +10,13 @@ author: 王怡蓁
 
 <p>「“我只希望在夜里可以好好躺一下，可以多喝一点水，可以不再泡在尿水里。”」</p><p>端传媒记者 王怡蓁 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/8d77a5c784784083bb71eb01c08d7ddb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="肌肉萎缩症患者玉姐。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">肌肉萎缩症患者玉姐。<span class="credit">摄：王怡蓁/端传媒</span></figcaption></figure><p><small>【编者按】“<a href="https://theinitium.com/channel/roving-reporter/">不重磅记者自留地</a>”是端传媒新开设的专栏，由来自不同地区的记者轮值书写。这些故事也许并不重磅、也非必要，却是记者生涯中，让我们心痒难耐、不吐不快的片刻。本期的自留地，述说一名肌肉萎缩症患者玉姐的故事，她的未竟之梦，以及卑微的祈求。</small></p>
-<p>这天一早，记者前往玉姐位于新北市树林区的家，举目望去，皆是连排的单层楼矮房，这相对都会区偏远的社区，是玉姐目前安身立命的处所。</p>
-<p>已逾65岁的玉姐是一名肌肉萎缩症患者，一人独居，虽然住处有两房一厅的格局，但玉姐绝大多数的生活，都浓缩在客厅；严格来说，是在客厅的一排咖啡色长椅上。</p>
-<p>长椅外观是台湾客厅常见样式，朴实传统但耐用，上头堆叠了几层尿布垫，在漫漫的长夜中，玉姐就这样只手撑住头，双腿以外八的姿势跪坐在长椅的尿布垫上。即便是白日居服员及个人助理前来的几个小时——这段能够好好躺著的时候——玉姐一样离不开这排椅子。</p>
-<p>玉姐的生活就从这张长椅展开。起居多在客厅的她，室内的两间房堆满尿布垫、卫生纸等日用品。室内没有电视、冷气等日常家电，耗电的电器仅有两台电暖器。3月中旬，上午气温已来到摄氏26度，记者得脱下外套、免得热出一身汗，但怕冷的玉姐，依旧开著电暖器，以暖热的风温暖她发寒的下肢。</p>
- 
-
- 
- 
- 
- 
- 
- 
- 
+<p>这天一早，我去到玉姐在树林区的家，玉姐的住处外观，是一整排连排的单层楼矮房，所在的社区相对都会区来的偏远，而这是玉姐目前仍能安身立命的处所。</p>
+<p>已逾65岁的玉姐是一名肌肉萎缩症患者，一人独居，虽然住处有两房一厅的格局，但她绝大多数的生活，都浓缩在客厅；严格来说，是在客厅的一排咖啡色的长椅上。</p>
+<p>长椅外观是台湾客厅常见样式，朴实、传统、但耐用，上头堆叠了几层尿布垫；在漫漫的长夜中，玉姐就这样只手撑住头，双腿以外八的姿势跪坐在长椅的尿布垫上。即便是白天时居服员及个人助理前来的几个钟头——这段能够好好躺著的时候——玉姐一样离不开这排椅子。</p>
+<p>玉姐一天的生活就从这张长椅展开，也在这张长椅上结束。</p>
  
  
 
- 
- 
- 
- 
- 
- 
  
  
  
@@ -67,6 +52,12 @@ author: 王怡蓁
  
  
  
+ 
+ 
+ 
+ 
+ 
+ 
 
  
  
@@ -74,15 +65,26 @@ author: 王怡蓁
  
  
  
-<p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/c1454ee3ab8b4a3580efbfda6e73f476.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="紧急铃的对讲机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">紧急铃的对讲机。<span class="credit">摄：王怡蓁/端传媒</span></figcaption><p></p><p>玉姐的居服员这天清晨五点来到家中，她这时才得以从浸湿的尿布垫脱身。居服员先是仔细盘起玉姐的头发，头上贴著两片浏海贴固定散出的发丝，露出整齐白净的脸。玉姐说，一年365天，只有三、四个晚上能保持下身干爽，那几个夜晚对她来说都是奢求，“不管春夏秋冬，我的下半身都泡在濡湿的尿布垫上，撑著、打盹、直到白天。”坐在尿水上的时间一长，玉姐的皮肤也跟著又痛又痒。</p><p>玉姐的身体机能今天比昨天退化，仅有颈部与左手还稍有力气，当记者来访时，她请个人助理阿紫将她调整到一个“完美”的角度——左手靠在抽屉上、握拳撑著头，这个旁人看起来不舒适的姿势，但却能让她撑上几个钟头不会手麻。</p><p>2011年台湾通过障碍者的<a href="https://theinitium.com/article/20230316-taiwan-independent-living-options/">自立生活支持服务</a>，希望障碍者可以掌握自己的生活，自行决定要过什么样的日子，然而，目前该项服务在北台湾的台北市、新北市、基隆市的内容不一，身处“大台北生活圈”，从基隆到台北，则让障碍者感受到两种截然不同的服务方式。</p><p>先撇除这些实质内容的差异，个人助理的服务时数限制，也让障碍者落入“看得到却吃不到”困局。以玉姐来说，2020年她获得新北市政府核定的60小时个人助理服务时数，也就是一天仅有两个小时；若再加入长照的居服员时数，玉姐一个月计有210个小时。看似不算少，但对玉姐这样的肌肉萎缩症患者来说，在漫长的一天中，她仍必须独自一人度过17个小时。这17个小时会发生什么事，没人可以保证。</p><p>被视为玉姐“生命线”的，是桌上一个小小的紧急铃，在玉姐发生紧急状况时，可以按下中间的红色按钮求助。这是社会局配给独居老人的保全紧急铃。</p><p>它的使用方式是这样的：首先，玉姐先按下紧急铃，通报会转往保全中心。她操作了一次给记者看，对讲机响起“通报连线中”的语音，玉姐因为连转动脖子看时钟的力气都都使不上了，于是她问了接线的保全中心人员“现在几点了”，对方告知后，玉姐才挂断。</p><p>玉姐一个晚上至少要寻求员警前往协助两次。她知道警察很忙，但自己一旦躺下后就再也爬不起身，只能孤身一人在地板、或椅子上忍耐数小时，直到身体麻掉、痛到无法忍受，她才会按下紧急铃。</p><p>玉姐担心员警觉得“自己很麻烦”。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/1c27871411ae4fd5b58f099040a06cab.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="屋内两房都是储物间。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+<p>起居多在客厅的她，室内的另两间房则堆满尿布垫、卫生纸等日用品。室内没有电视、冷气等日常家电，耗电的电器仅有两台电暖器。台湾的3月中旬，上午气温已来到摄氏26度，记者得脱下外套、免得热出一身汗，但怕冷的玉姐，依旧开著电暖器，送出暖热暖热的风，以温暖她发寒的下肢。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/c1454ee3ab8b4a3580efbfda6e73f476.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="紧急铃的对讲机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">紧急铃的对讲机。<span class="credit">摄：王怡蓁/端传媒</span></figcaption><p></p><p>玉姐的居服员这天清晨五点来到家中，她这时才得以从浸湿的尿布垫脱身。居服员先是仔细盘起玉姐的头发，头上贴著两片浏海贴固定散出的发丝，露出整齐白净的脸。玉姐说，一年365天，只有三、四个晚上能保持下身干爽，那几个夜晚对她来说都是奢求，“不管春夏秋冬，我的下半身都泡在濡湿的尿布垫上，撑著、打盹、直到白天。”坐在尿水上的时间一长，玉姐的皮肤也跟著又痛又痒。</p><p>玉姐的身体健康一天不如一天，目前仅有颈部与左手还称得上有力气。采访这天，她请个人助理阿紫将她调整到一个“完美”的角度——左手靠在抽屉上、握拳撑著头，这个任旁人看起来都不舒服的姿势，但却能让她撑上几个钟头不会手麻。</p><p>2011年，台湾通过障碍者<a href="https://theinitium.com/article/20230316-taiwan-independent-living-options/">自立生活支持服务</a>，希望障碍者可以掌握自己的生活，自行决定要过什么样的日子，然而，该项服务在北台湾的台北市、新北市、基隆市的内容不一，即便身处“大台北生活圈”，但光是从基隆到台北这趟路程，则让障碍者体验到截然不同的沿路风景。</p><p>先撇除这些实质内容的差异，个人助理的服务时数限制，也让障碍者落入“看得到却吃不到”困局。以玉姐来说，2020年她获得新北市政府核定的60小时个人助理服务时数，换算下来，一天仅有两个小时；若再加入长照的居服员时数，玉姐一个月计有210个小时。看似不算少，但对玉姐这样的肌肉萎缩症患者来说，在漫长的一天中，她仍必须独自一人度过漫长的17个小时。这段时间内会发生什么事，没人可以保证。</p><p>被视为玉姐“生命线”的，是桌上一个小小的紧急铃，在玉姐发生紧急状况时，可以按下中间的红色按钮求助。这是社会局配给独居老人的保全紧急铃。</p><p>它的使用方式是这样的：首先，玉姐先按下紧急铃，通报会转往保全中心。她向我示范了一次，按下按钮、对讲机响起“通报连线中”的语音，玉姐询问了对方现在几点了，得到回应才挂断。（注：由于玉姐连转动脖子看时钟都没有力气，只得透过按压紧急铃获得资讯。）</p><p>玉姐一个晚上至少要寻求员警前往协助两次。她知道警察很忙，但自己一旦躺下后就再也爬不起身，只能孤身一人在地板、或椅子上忍耐数小时，直到身体麻掉、痛到无法忍受，她才会按下紧急铃。</p><p>玉姐担心自己让员警觉得“很麻烦”。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/1c27871411ae4fd5b58f099040a06cab.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="屋内两房都是储物间。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">屋内两房都是储物间。<span class="credit">摄：王怡蓁/端传媒</span></figcaption><p></p><p>个人助理不只是来陪聊</p><p>
 </p><p>“他们（居服员）不太跟玉姐聊天，却说我们不做事、不重要，只是来聊天⋯⋯”</p>
-<p></p><p>对像玉姐这样的重度障碍者来说，医院、机构有24小时的服务，但长照跟自立生活却没有同样的支持服务。每当夜幕低垂，玉姐知道，一场只有自己陪伴自己的长夜即将来临。</p><p>以现况来说，愿意提供夜晚陪伴服务的个人助理不多，政府也不为夜陪买单，在人力与资源的双重不足下，能找到愿意夜陪的个人助理，就是眼下必须越过的另一层障碍。</p><p>然而，玉姐现在的个人助理阿紫，则是在一次的夜陪中相识。</p><p>一年前的清明节，玉姐的居服员告假返乡扫墓，协助单位为玉姐找来少数愿意夜陪的阿紫，时间从傍晚六点到凌晨五点；那几天对玉姐来说，是少数下身能保持干爽的夜晚。</p><p>即使愿意夜陪的个人助理难寻，但阿紫一开始并非新北市正式聘雇的个人助理。原先已在台北市担任个人助理的阿紫，参与新北市个人助理面试后却杳无音讯。直到协助过玉姐、并在玉姐数度要求下，新北市才总算录取了阿紫。</p><p>像玉姐这样住在社区的重度障碍者，台湾政府提供障碍者的服务有“长照政策”下的居服员（居家服务员），以及“自立生活方案”下的个人助理两类；障碍者可以同时申请，但服务时间不能重叠。</p><p>在不同政策底下，居服员及个人助理提供的服务内容各异。简单来说，个人助理会代替障碍者的失能部分，协助障碍者达成生理上如进食、洗澡、如厕、做饭，及社会性的参加活动与出游等。而居服员仅能提供居家协助及就医等经政府确认有需求之项目。两者最大的区别在于，个人助理须依照障碍者自主权完成工作、居服员较无达成自主权的概念。</p><p>然而，个人助理制度在台湾上路至今已12年，不仅使用率偏低、个人助理人数也少，如玉姐居住的新北市，有17万名障碍者，90人登记需要个人助理服务，但仅有60人活跃使用，个人助理人数也仅有27人。</p><p>事实上，新北市的资源窘困也是全台湾的缩影。社团法人台湾身心障碍者人权监督联盟理事长张学恒便指出，目前台湾有22万名外籍看护，居服员有3万人，但全台120万的身障者，却只有625名个人助理，至今使用服务的障碍者只有908名。</p><p>作为障碍者“手脚”的个人助理，彼此互动更像是工作上的伙伴关系。但即便协助满足障碍者在生理或社会参与的需求，却也时常被戏称为只是来“陪聊”的对象。</p><p>与玉姐合作快一年的阿紫说，她今天八点一到，玉姐倒在椅子上，但居服员认为这没关系，“他们（居服员）不太跟玉姐聊天，却说我们不做事、不重要，只是来聊天⋯⋯”但阿紫也调侃了自己一把，说她只是来帮忙赶蚊子、赶蟑螂、帮忙抓痒而已——即使这就是生活的样貌。</p><p>如今，阿紫会固定帮玉姐去提款机领钱，让她支付日常费用，她很感谢玉姐对她的信任，但话锋一转也不免“亏”了玉姐：“虽然户头也没多少钱啦！”玉姐听了放声笑得开怀，但她对阿紫的感谢总是不吝于说出。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/223f3e9c01784c42b682ef6c9ad3d194.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="与玉姐合作快一年的个人助理阿紫。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p></p><p>对玉姐这样的重度障碍者来说，医院、机构有24小时的服务，但长照跟自立生活却没有同样的支持服务；每当夜幕低垂，玉姐知道，一场只有自己陪伴自己的长夜即将日复一日地考验著她。</p><p>以现况来说，愿意提供跨夜陪伴服务的个人助理不多，政府也不为夜陪买单，在人力与资源的双重不足下，能找到愿意夜陪的个人助理，几乎是道难以跨越的门槛。</p><p>而玉姐现在的个人助理阿紫，则是在一次的夜陪中相识。</p><p>一年前的清明节，玉姐的居服员要返乡扫墓因此向她告假，协助单位为玉姐找来少数愿意夜陪的阿紫，时间从傍晚六点到凌晨五点；那几天现在回想起来，简直是少数下身能保持干爽的夜晚。</p><p>即使愿意夜陪的个人助理难寻，但阿紫一开始并非新北市正式聘雇的个人助理。原先已在台北市担任个人助理的阿紫，参与新北市个人助理面试后却杳无音讯。直到协助过玉姐、并在玉姐数度要求下，新北市才总算录取了阿紫。</p><p>在台湾，像玉姐这样住在社区的重度障碍者，政府提供障碍者的服务有“长照政策”下的居服员（居家服务员），以及“自立生活方案”下的个人助理两类；在执行面上，障碍者可以同时申请，但服务时间不能重叠。</p><p>然而，不同政策下，居服员及个人助理提供的服务内容也大异其趣。简单来说，个人助理会代替障碍者的失能部分，协助障碍者达成生理上如进食、洗澡、如厕、做饭，及社会性的参加活动与出游等。而居服员仅能提供居家协助、及就医等经政府确认有需求之项目。两者最大的区别在于，个人助理须依照障碍者自主权完成工作、居服员较无达成自主权的概念。</p><p>自2011年开始，个人助理制度上路已12年，但使用率偏低、个人助理人数也少，如玉姐居住的新北市，有17万名障碍者，90人登记需要个人助理服务，但仅有60人活跃使用，个人助理人数也仅有27人。</p><p>这样的现象，也非新北市独有，全台湾几乎都陷入这样的困局中。社团法人台湾身心障碍者人权监督联盟理事长张学恒便指出，目前台湾有22万名外籍看护，居服员有3万人，但全台120万的身障者，却只有625名个人助理，至今使用服务的障碍者只有908名。</p><p>许多人对个人助理所能提供的支持服务认识有限，许多不明就里的就戏称个人助理只是来“陪聊”。但观察个人助理与障碍者的互动，彼此的关系更像是工作上的伙伴关系，除满足障碍者的生理需求，也协助社会参与。</p><p>与玉姐合作快一年的阿紫说，她今天八点一到，玉姐倒在椅子上，但居服员认为这没关系，“他们（居服员）不太跟玉姐聊天，却说我们不做事、不重要，只是来聊天⋯⋯”但阿紫也调侃了自己一把，说她只是来帮忙赶蚊子、赶蟑螂、帮忙抓痒而已——即使这就是生活的样貌。</p><p>如今，阿紫会固定帮玉姐去提款机领钱，让她支付日常费用，她很感谢玉姐对她的信任，但话锋一转也不免“亏”了玉姐说：“虽然户头也没多少钱啦！”玉姐听了放声笑得开怀，但她对阿紫的感谢总是不吝于说出。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/223f3e9c01784c42b682ef6c9ad3d194.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="与玉姐合作快一年的个人助理阿紫。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">与玉姐合作快一年的个人助理阿紫。<span class="credit">摄：王怡蓁/端传媒</span></figcaption><p></p><p>患有肌肉萎缩症，但玉姐仍有梦</p><p>
 </p><p>阿紫问她：“妳真的还想延缓吗？”玉姐停顿了一下说：“至少不要那么快⋯⋯我也想自己吃饭啊。”</p>
-<p></p><p>患有肌肉萎缩症的玉姐，从小问遍医生自己的病能不能好起来？有没有新的药可以让她试试看，然而肌肉萎缩症无法“康复”，只能延缓恶化。阿紫问她：“妳真的还想延缓吗？”玉姐停顿了一下说：“至少不要那么快⋯⋯我也想自己吃饭啊。”</p><p>1996年时，玉姐应征上伊甸基金会的总机工作，她说总机的工作让她学会很多事、认识了很多的人，还因此训练出背诵电话号码的能力，至今依然能背出数十组电话号码。</p><p>喜欢广播的玉姐，至今广播仍是她接收资讯的来源，陪伴她无数的寂寥长夜。“肠病毒71型，小朋友要注意，”她突如其来用广播的声调，念出最近的资讯，显示她多么依赖广播。</p><p>2006年，玉姐并在台湾艺术大学学习半学期的录音与节目制作课程，她自豪地说：“我的播音成绩有90分喔！”后来玉姐陆续担任播音志工、录制有声书，虽曾梦想外出持续录音工作，但身体健康每况愈下，加上个人助理服务时数有限，让她难以完成这个想望。</p><p>玉姐现在的居所，距离他父母老家步行仅需一分钟。这个“老家”，是她已故父亲的铁路局宿舍，住了超过50年，先是父亲走了，接著母亲健康也开始出现问题。本来申请照顾母亲的外籍看护，不料看护申请到时、母亲却提前一步离世，看护也就阴错阳差地照顾起玉姐。</p><p>但这段经历却是玉姐不愿想起的回忆。</p><p>她说，外籍看护对她态度并不友善、动作粗鲁，曾大力推她、也经常额外要更多的钱。一天，看护去帮她买早餐，人却一去不回。玉姐说，虽然后来仲介还是回报人找到了，但玉姐也不敢用；何况，当时外籍看护的基本工资为台币两万块，但玉姐的低收入、加上身障补助，总共也才一万五千多块而已。</p><p>2014年后，因为父母过世，玉姐再也无法住在父亲的宿舍，搬离后她短暂搬到一处称“不太平安”的住处。</p><p>为什么“不太平安”？她说，自己经常听到塑胶摩擦、嘶吼等怪声，之后在民间团体的出资下，找来的外籍夜陪看护，她们也听到了声音，其中一位胆子大的看护更告诉玉姐：“不要怕，妳找妳的神，我找我的阿拉。”</p><p>然而，玉姐的神终究无法让她不害怕，在社工的劝说下，她试著住进机构、过上团体的生活。但她不喜欢机构生活的不自由。</p><p>在机构的一天，生活得按表抄课，洗澡会被架在钢架上，推进一处光线昏暗的空间涂抹肥皂水。玉姐说，她已经交代不要用肥皂，因为她的皮肤容易过敏发痒，但对方还是照抹不误，到头来只得自费买食盐水擦拭身体。这样的不自由生活，一周得花八千块买。尔后，她就在教会朋友的介绍下来到现在的住所。</p><p>“在社区，我可以自主决定生活，吃我想吃的东西，普通的水饺、酸辣汤，就是我觉得美味的餐点。”她说。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/a2299e36d01f4cd1974e15811294b886.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="玉姐家外的环境。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p></p><p>患有肌肉萎缩症的玉姐，从小问遍医生自己的病能不能好起来？有没有新的药可以让她试试看，然而肌肉萎缩症无法“康复”，只能延缓恶化。阿紫问她：“妳真的还想延缓吗？”玉姐停顿了一下说：“至少不要那么快⋯⋯我也想自己吃饭啊。”</p><p>在肌肉萎缩这条无法回头的路上，在坐卧在这张长椅前，她曾外出工作，也对广播有浓厚兴趣。她向我说：1996年时，她应征上伊甸基金会的总机工作，这份让她学会很多事、认识了很多的人，还因此训练出背诵电话号码的能力，至今依然能背出数十组电话号码。</p><p>而喜欢广播的玉姐，至今广播仍是她接收资讯的来源，陪伴她无数的寂寥长夜。“肠病毒71型，小朋友要注意，”她突如其来用广播的声调，念出最近的资讯，显示她多么依赖广播。</p><p>玉姐显得兴致高昂，她说：2006年，她在台湾艺术大学学习半学期的录音与节目制作课程，并自豪地说：“我的播音成绩有90分喔！”后来玉姐陆续担任播音志工、录制有声书，虽曾梦想外出持续录音工作，但身体健康每况愈下，加上个人助理服务时数有限，让她难以完成这个想望。</p><p>玉姐现在的居所，距离他父母老家步行仅需一分钟。这个“老家”，是她已故父亲的铁路局宿舍，住了超过50年，先是父亲走了，接著母亲健康也开始出现问题。本来要申请来照顾母亲的外籍看护，不料申请通过时、母亲早前一步离世，看护也就阴错阳差地照顾起玉姐。</p><p>但这段经历却是玉姐不愿想起的过去。</p><p>她说，外籍看护对她态度差、动作粗鲁，曾大力推她、也经常额外要更多的钱。一天，看护去帮她买早餐，人却一去不回。玉姐说，虽然后来仲介回报人找到了，但玉姐也不敢用；何况，当时外籍看护的基本工资为台币两万块，但玉姐的低收入、加上身障补助，总共也才一万五千多块而已。</p><p>2014年后，因为父母过世，玉姐再也无法住在父亲的宿舍，搬离后她短暂搬到一处称“不太平安”的住处。</p><p>为什么“不太平安”？她说，自己经常听到塑胶摩擦、嘶吼等怪声，后来民间团体出资下找来外籍夜陪看护，她们也听到了声音，其中一位胆子大的看护更告诉玉姐：“不要怕，妳找妳的神，我找我的阿拉。”</p><p>然而，玉姐的神终究无法让她不害怕，在社工的劝说下，她住进了机构、过上团体的生活。但不自由的机构生活，说来依然心有余悸。</p><p>在机构的生活，日日得按表抄课，尤其是洗澡，“洗澡会被架在钢架上，推进一处光线昏暗的空间涂抹肥皂水。”玉姐说，她已经交代不要用肥皂，因为她的皮肤容易过敏发痒，但对方还是照抹不误，到头来只得自费买食盐水擦拭身体。这样的不自由生活，一周得花八千块买。尔后，她就在教会朋友的介绍下来到现在的住所。</p><p>“在社区，我可以自主决定生活，吃我想吃的东西，普通的水饺、酸辣汤，就是我觉得美味的餐点。”她说。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/a2299e36d01f4cd1974e15811294b886.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="玉姐家外的环境。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">玉姐家外的环境。<span class="credit">摄：王怡蓁/端传媒</span></figcaption><p></p><p>“我真的是跟时间在赛跑”</p><p>
 </p><p>“我只希望在夜里可以好好躺一下，可以多喝一点水，可以不再泡在尿水里。”</p>
-<p></p><p>玉姐的故事折射出障碍者在现行制度下的困境，她不想再当障碍者处境的缩影，决定状告新北市政府，要求政府提供真正符合障碍者需求的自立生活支持服务。</p><p>状告政府的故事要从2021年说起。这年，健康状况不被建议施打疫苗的玉姐，被个人助理传染COVID-19，住进隔离病房，虽然个人助理愿意入院照料，但医院政策不允许外部人员进入，玉姐只得透过台北市新活力自立生活协会、台湾身心障碍者自立生活联合等民间团体募款，最终筹到了14万的看护费以照看她。</p><p>在大病之后，玉姐的身体状况加速恶化，需要更多的照护人力需求，她因而决心对政府提起行政诉讼，希望台湾能比照日本、韩国等，提供24小时的个人助理服务。</p><p>如今问起玉姐当时为什么决定告政府，她说自己只是不想继续睡在尿水上，只想好好睡上一觉。在开庭时，由于行动不便，玉姐只能以视讯表达她的主张：“我想要自由，自由的生活与心灵，我希望政府至少可以好好照顾我，让我好好吃个饭、睡觉。我生活中的难处应该要被看见、理解。希望庭上能够知道我们的困境。”</p><p>开庭过程，新北市府的委任律师则主张，“一旦通过24小时的服务，将与长照时间重叠，造成资源浪费、财政负担，甚至挤压到其他族群的预算。”辩方律师指出，“24小时的照护诉求，形同要政府为障碍者的所有需求买单。”</p><p>此刻，原先肃穆的法庭爆出一阵鼓噪。旁听席边七、八辆电动轮椅上的障碍者不满地发出愤怒的声响。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/d0b38537e9bd4433aa23fab01d68cfca.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年3月16日，台北高等行政法院，法庭外聚集了一群障碍者与声援的民间团体。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2023年3月16日，台北高等行政法院，法庭外聚集了一群障碍者与声援的民间团体。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>本起诉讼也在今年的3月16日宣判，法庭外聚集了一群障碍者与声援的民间团体。法院判决指出，行政机关的时数限制违反母法，必须重新核定玉姐的个人助理服务时数，并依玉姐的实际状况评估、并重新核定时数。</p><p>判决宣判这日，玉姐因为个人助理请假而无法到家为她准备视讯连线，她准备了一段录音表达感谢：“这一路走来不容易，对于这样的结果感到欣慰，生活的辛苦，终于被看见、重视。现在完成阶段性使命，希望接下来社会局的评估可以真正符合我的需求。”玉姐说，这不是她个人福祉的进步，众多障碍者的权益同样需要被关注。</p><p>判决宣判后隔日，记者询问玉姐对于判决结果是否满意，但她并未有太多的情绪起伏。玉姐停顿一下后说：“我希望社会局不要上诉……我真的是跟时间在赛跑……。”身体状况今天比不上昨天的她，即便是使用筷子，都必须用仅剩的一点力气固定；右手没有力气了，要按警急铃，只剩下左手拇指。</p><p>肌肉萎缩症，这场不可逆的病，没有看到尽头的一天，一辈子仍在学习如何与其共处。她告诉我，她是多么卑微、卑微的希望，只是想满足基本生活需求就好，“在夜里可以好好躺一下，可以多喝一点水，可以不再泡在尿水里。”</p><p>因为个人助理的种种限制，为了减少如厕需求，她一天只敢吃一餐；几小口汤、几颗饺子、一天最多不超过20cc的水。身体上的障碍可以共处，制度上的障碍却加深障碍的刻度。</p><p>比起胜诉判决，食物似乎让玉姐更感兴趣，喜爱中式料理的她，最爱的食物是泡面加蛋。那今天中午吃什么？她撑著头，笑瞇瞇地说，“我今天的美味是酸辣汤！”</p><p><strong>（尊重受访者意愿，玉姐、阿紫皆为化名）</strong></p>
+<p></p><p>玉姐的故事折射出障碍者在现行制度下的困境，但她不想再当障碍者处境的缩影，决定从阴影中现身、状告新北市政府，要求政府提供真正符合障碍者需求的自立生活支持服务。</p><p>状告政府的故事要从2021年说起。这年，因健康状况而未能施打疫苗的玉姐，被个人助理传染COVID-19，住进隔离病房，虽然个人助理愿意入院照料，但医院不允许外部人员进入，玉姐只得透过台北市新活力自立生活协会、台湾身心障碍者自立生活联合等民间团体募款，最终筹到了14万的看护费照顾她。</p><p>在大病之后，玉姐的身体状况加速恶化，需要更多的照护人力需求，她因而决心对政府提起行政诉讼，希望台湾能比照日本、韩国等，提供24小时的个人助理服务。</p><p>如今问起玉姐为什么当时决意告政府，她说自己只是不想继续睡在尿水上，只想好好睡上一觉。玉姐成了台湾首起障碍者个人助理时数诉讼案的主角。</p><p>虽然是“首起”障碍者争取支持服务的主角，但由于行动不便，玉姐只能以视讯表达她的主张：“我想要自由，自由的生活与心灵，我希望政府至少可以好好照顾我，让我好好吃个饭、睡觉。我生活中的难处应该要被看见、理解。希望庭上能够知道我们的困境。”</p><p>但对于被告的一方，新北市府的委任律师反驳认为，“一旦通过24小时的服务，将与长照时间重叠，造成资源浪费、财政负担，甚至挤压到其他族群的预算。”律师直指，“24小时的照护诉求，形同要政府为障碍者的所有需求买单。”</p><p>此刻，原先肃穆的法庭爆出一阵鼓噪。旁听席边七、八辆电动轮椅上的障碍者不满地发出愤怒的声响。</p><p><a class="image" href="https://theinitium.com/article/20230401-taiwan-pa-for-disabled-people/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/d0b38537e9bd4433aa23fab01d68cfca.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年3月16日，台北高等行政法院，法庭外聚集了一群障碍者与声援的民间团体。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2023年3月16日，台北高等行政法院，法庭外聚集了一群障碍者与声援的民间团体。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>这起身障者告政府的诉讼案，也在今年的3月16日宣判，当天法庭外聚集了一群障碍者与声援的民间团体。法院判决指出，行政机关的时数限制违反母法，必须重新核定玉姐的个人助理服务时数，并依玉姐的实际状况评估、并重新核定时数。</p><p>判决宣判这日，玉姐因为个人助理请假，无法到玉姐家为她准备视讯连线，玉姐准备了一段录音表达感谢：“这一路走来不容易，对于这样的结果感到欣慰，生活的辛苦，终于被看见、重视。现在完成阶段性使命，希望接下来社会局的评估可以真正符合我的需求。”玉姐说，这不是她个人福祉的进步，众多障碍者的权益同样需要被关注。</p><p>这样的判决结果，对于争讼已两年的玉姐来说，她反而没有太多的情绪起伏。我询问玉姐，对判决满意吗？她停顿一下后跟我说：“我希望社会局不要上诉……我真的是跟时间在赛跑……。”身体状况今天比不上昨天的她，即便是使用筷子，都必须用仅剩的一点力气固定；右手没有力气了，要按警急铃，只剩下左手拇指。</p><p>肌肉萎缩症，这场不可逆的病，没有看到尽头的一天，一辈子仍在学习如何与其共处。她告诉我，她是多么卑微、卑微的希望，只是想满足基本生活需求就好，“在夜里可以好好躺一下，可以多喝一点水，可以不再泡在尿水里。”</p><p>因为个人助理的种种限制，为了减少如厕需求，她一天只敢吃一餐；几小口汤、几颗饺子、一天最多不超过20cc的水。身体上的障碍可以共处，制度上的障碍却加深障碍的刻度。</p><p>相较起胜诉判决的访问，关于食物的主题似乎让玉姐更感兴趣，喜爱中式料理的她，最爱的食物是泡面加蛋。采访告一段落，我准备离开，仿佛想到些什么，我又问了问，“玉姐，等等中午吃什么？”她撑著头，笑瞇瞇地说，“我今天的美味是酸辣汤！”</p><p><strong>（尊重受访者意愿，玉姐、阿紫皆为化名）</strong></p>
