--- a/_posts/2023-04-01-PQ-蔡總統低調過境美國-中國越打壓民主國家越支持台灣.html
+++ b/_posts/2023-04-01-PQ-蔡總統低調過境美國-中國越打壓民主國家越支持台灣.html
@@ -24,7 +24,7 @@ author: 林 奕辰
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664.jpg" alt="" class="wp-image-131458" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664-768x512.jpg 768w" sizes="(max-width: 799px) 100vw, 799px" /><figcaption>蔡英文總統在紐約停留的第二日造訪台美青年經營的店舖，並邀請他們各自分享在美國創業或來美國追夢的契機與理念，此為在紐約少數的公開行程。／圖：總統府</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664.jpg" alt="" class="wp-image-131458" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/60fc5015-336f-4160-9cd6-839f1abc1664-768x512.jpg 768w" sizes="(max-width: 799px) 100vw, 799px" /><figcaption>蔡英文總統在紐約停留的第二日造訪台美青年經營的店舖，並邀請他們各自分享在美國創業或來美國追夢的契機與理念，此為在紐約少數的公開行程。／圖：總統府</figcaption></figure></div>
 
 
 
