Update VOCUS 2023-04-02 patch

--- a/_posts/2023-03-30-VOCUS-小智是女孩啦-格鬥系女孩也想談戀愛-怎樣的女性最有魅力.html
+++ b/_posts/2023-03-30-VOCUS-小智是女孩啦-格鬥系女孩也想談戀愛-怎樣的女性最有魅力.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">現在有很多作品在描寫另一種類型的女性故事時，不管是少數族群、或是LGBT等，都很常用讓人不適的方式去表達，連本身群體的人都不太能接受這種詮釋他們族群的方式。我覺得這是一種描寫的太用力和太刻意，自以為有發聲的一種自我滿足，招來的反效果。回歸到創作與作品的表現：有趣、吸引人、讓人想了解。之後才是附加的細節與對社會的發聲，但現在很多作品卻反其道而行。</div>
 <div class="draft-block draft--p left">《小智是女孩啦！》雖然也有著老套的安排，和一些刻板的性別笑點。但只要有在適時的章節帶出探討就足夠讓人印象深刻，披著非傳統受到亞洲人喜歡的女性特質的女角，讓人反思小智是否就該拋去這些當個大和撫子的乖乖女，以她的身材與臉蛋這樣的確有更多男性為她著迷。</div>
 <div class="draft-block draft--p left">但就像動畫最後拋出的，這樣的小智還是觀眾與她朋友喜歡的小智嗎？女性的迷人之處難道只能拘泥於傳統社會結構下的樣貌嗎？還是更加自由的讓人被她所吸引。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/tzfix_owfSw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/tzfix_owfSw"></iframe></div>
