--- a/_posts/2023-03-31-INMEDIA-初選47人案-趙家賢稱對戴耀廷未得共識推-攬炒-感-好火滾-指對方猶如-民主派全港唯一領導人.html
+++ b/_posts/2023-03-31-INMEDIA-初選47人案-趙家賢稱對戴耀廷未得共識推-攬炒-感-好火滾-指對方猶如-民主派全港唯一領導人.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p><strong>趙稱戴協調期間撰「煽動性」文章</strong></p>
 <p>案發時任民主動力召集人趙家賢繼續作供。控方展示戴耀廷2020年4月20日文章〈香港攬炒大對決〉，提及「民主派現正密鑼緊鼓部署9月的立法會選舉，希望奪取一半議席。民主派明言若能成功，在明年就會否決財政預算案，到時立法會有可能被解散，特區政府也可能停擺。民主派的策略是以『攬炒』去迫使中共及特區政府就『反送中』所提出的五大訴求作讓步。」</p>
 <p>趙表示他沒有看過文章，「但我想有啲嘢想即時講講」，指文章發布時戴在各區協調會議有帶出他自己或民間的一些建議，即否決財政預算案，而趙的概括認知是民主陣營有不同政治光譜，有人「好支持呢種做法」、傳統民主派則「有疑問」，當時仍在討論當中。</p>
-<p>趙續指，「而戴耀廷喺呢個協調嘅時候，佢寫一啲咁樣煽動性、同埋好似預言家嘅文章」，尤其是「民主派明言若能成功，在明年就會否決財政預算案」、「民主派的策略是以『攬炒』去迫使中共」兩句，「整段呢啲訊息，根本佢冇獲得任何嘅清楚明確嘅授權。我而家第一次睇到呢篇文章，我睇到呢啲字眼，我係好火滾 」，趙提到「好火滾」時身體微微振動，鄒家成發笑。</p>
+<p>趙續指，「而戴耀廷喺呢個協調嘅時候，佢寫一啲咁樣煽動性、同埋好似預言家嘅文章」，尤其是「民主派明言若能成功，在明年就會否決財政預算案」、「民主派的策略是以『攬炒』去迫使中共」兩句，「整段呢啲訊息，根本佢冇獲得任何嘅清楚明確嘅授權。我而家第一次睇到呢篇文章，我睇到呢啲字眼，我係好火滾 」，趙提到「好火滾」時身體微微震動，鄒家成發笑。</p>
 <p><strong>趙指事前若看清戴耀廷發言 「好深信」民動不會同意承辦初選</strong></p>
 <p>趙續不忿指，戴根本在未有處理好所有人的共識下，「佢都已經好似係民主派全港唯一領導人，就講民主派會咁做啦，完全係一個自負、不負責任嘅行為」，此時林卓廷笑出聲，鄒家成亦微微向前俯身發笑，旁聽席有人說「痴線」。趙續指，對他和民主動力而言，「我欠缺咗一個盡職審查嘅責任，如果當時5月底我同意做承辦初選之前，如果我同我組織成員有仔細睇返清楚戴耀廷咁多嘅呢啲文章嘅發言，咁我好深信，我同民主動力都不會同意承辦初選。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/49S7372h98" title="民主黨 立法會議員 林卓廷"><img src="https://live.staticflickr.com/65535/50277451687_9b37126cd1_c.jpg" width="800" alt="民主黨 立法會議員 林卓廷" /></a><br /><em>林卓廷（資料圖片）</em></p>
@@ -32,7 +32,7 @@ author: 獨媒報導
 <p><strong>趙家賢稱本土派與傳統泛民就否決權討論有「拉扯」</strong></p>
 <p>控方其後展示該份題為「35+立會過半計劃 民主派新西協調機制（初稿）」的附件，提及「會積極運用基本法賦予立法會的權力，包括否決財政預算案，迫使特首回應五大訴求」。被問會上有否討論該條款，趙指印象中戴有提過「民意」要求用否決權迫政府回應五大訴求，而當時「本土抗爭派同傳統民主派都就住個議題有一個拉扯」，因此戴發初稿時亦有表明未必是大家最想見到的方案。趙續指認為戴作為會議協調人，是有「挨向」運用基本法否決權的方向。</p>
 <p>法官李運騰問，在「會積極運用」和「會運用」字眼，戴是傾向哪方？趙指戴初稿是用了「會積極運用」字眼。法官陳仲衡再問，在想運用否決權和有保留的兩方，趙想指戴傾向哪一方？趙答「佢傾向本土抗爭派嗰邊」。</p>
-<p>陳仲衡指，文件顯示「會積極運用」而非「會運用」字眼，這是否反映戴偏向抗爭派的立場？趙指「法官閣下，喺我角度我覺得係有嘅」，指因戴若有保留的話，「佢應該要釐清有關政權嘅一啲關注」，惟戴在草稿中已將會運用否決權字眼加上去，「如果未傾得完全大方向同意嘅話，喺我作為做調解員嘅操守當中，其實係完全成句係唔應該出現嘅」，鄒家成和林卓廷發笑。陳仲衡問，故在拔河中，戴是站在本土抗爭派那邊？趙同意這是他當時觀察到的情況。</p>
+<p>陳仲衡指，文件顯示「會積極運用」而非「會運用」字眼，這是否反映戴偏向抗爭派的立場？趙指「法官閣下，喺我角度我覺得係有嘅」，指因戴若有保留的話，「佢應該要釐清有關政團嘅一啲關注」，惟戴在草稿中已將會運用否決權字眼加上去，「如果未傾得完全大方向同意嘅話，喺我作為做調解員嘅操守當中，其實係完全成句係唔應該出現嘅」，鄒家成和林卓廷發笑。陳仲衡問，故在拔河中，戴是站在本土抗爭派那邊？趙同意這是他當時觀察到的情況。</p>
 <p><strong>被問有否出席港島會議 趙家賢一度指記憶模糊後稱「應該係有出席」</strong></p>
 <p>至於港島區，WhatsApp紀錄顯示2020年4月17日第二次港島會議後，趙家賢翌日早上曾向戴耀廷查詢出席者名單，稱「有啲樣我會搞錯咗」，戴回覆的名單顯示有趙家賢名字。主控萬德豪問趙有否出席會議，趙靜默約15秒後稱有出席，但指看訊息後「都有少少模糊，因為我係用呢個圖象記憶嘅思維……」，林卓廷說「吓」，亦有被告發笑，趙並指訊息「字面上睇」，就應該指他當晚有出席會議，「但係有一啲新面孔我唔認得」。</p>
 <p>法官李運騰問，他是否不肯定有否出席？趙稱「我而家思考緊」，林卓廷大笑。李運騰並指現時離會議近三年，理論上趙當時的記憶會較準確，陳慶偉亦指若趙沒有出席，當時看到自己名單出席在名單上應會很驚訝。趙在控方和法官澄清下，終表示根據訊息，「我應該係有出席個會議嘅」。</p>
