--- a/_posts/2023-04-02-INMEDIA-教堂儀式遊行條件列明需持棕枝-守禁蒙面法-惟信眾指教堂沒有規定-警員沒理會.html
+++ b/_posts/2023-04-02-INMEDIA-教堂儀式遊行條件列明需持棕枝-守禁蒙面法-惟信眾指教堂沒有規定-警員沒理會.html
@@ -2,7 +2,7 @@
 layout: post
 title: 教堂儀式遊行條件列明需持棕枝、守禁蒙面法 惟信眾指教堂沒有規定、警員沒理會
 date: 2023-04-02 05:43:38.000000000 +00:00
-link: https://www.inmediahk.net/node/%E6%95%99%E5%A0%82%E5%84%80%E5%BC%8F%E9%81%8A%E8%A1%8C%E6%A2%9D%E4%BB%B6%E5%88%97%E6%98%8E%E9%9C%80%E6%8C%81%E6%A3%95%E6%9E%9D%E3%80%81%E5%AE%88%E7%A6%81%E8%92%99%E9%9D%A2%E6%B3%95-%E6%83%9F%E4%BF%A1%E7%9C%BE%E6%8C%87%E6%95%99%E5%A0%82%E6%B2%92%E6%9C%89%E8%A6%8F%E5%AE%9A%E3%80%81%E8%AD%A6%E5%93%A1%E6%B2%92%E7%90%86%E6%9C%83
+link: https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%95%99%E5%A0%82%E5%84%80%E5%BC%8F%E9%81%8A%E8%A1%8C%E6%A2%9D%E4%BB%B6%E5%88%97%E6%98%8E%E9%9C%80%E6%8C%81%E6%A3%95%E6%9E%9D%E3%80%81%E5%AE%88%E7%A6%81%E8%92%99%E9%9D%A2%E6%B3%95-%E6%83%9F%E4%BF%A1%E7%9C%BE%E6%8C%87%E6%95%99%E5%A0%82%E6%B2%92%E6%9C%89%E8%A6%8F%E5%AE%9A%E3%80%81%E8%AD%A6%E5%93%A1%E6%B2%92%E7%90%86%E6%9C%83
 categories: inmedia
 tags: blog
 author: 獨媒報導
