--- a/_posts/2023-03-31-INITIUM-跨性别与顺女对谈-公共卫生间的恐惧和尴尬中-我们究竟在争吵和争取什么.html
+++ b/_posts/2023-03-31-INITIUM-跨性别与顺女对谈-公共卫生间的恐惧和尴尬中-我们究竟在争吵和争取什么.html
@@ -5,7 +5,7 @@ date: 2023-03-31 03:13:00.000000000 +00:00
 link: https://theinitium.com/article/20230331-opinion-talk-toilet-public-space-use-trans-and-ciswomen/
 categories: initium
 tags: blog
-author: 端传媒记者苑悠、符雨欣
+author: 符雨欣
 ---
 
 <p>「公共卫生间是一个怎样的空间？顺性别女性和跨性别者在其中分别有怎样的经历？」</p><p>端传媒记者苑悠、符雨欣</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230331-opinion-talk-toilet-public-space-use-trans-and-ciswomen/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/6ed38e150fde4030a7c0b78ce032bd50.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2018年11月6日，北京，参观者正在观看新世代厕所博览会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
