--- a/_posts/2023-04-02-INITIUM-特朗普被起诉-他会否成为首名被刑事定罪的美国总统-whatsnew.html
+++ b/_posts/2023-04-02-INITIUM-特朗普被起诉-他会否成为首名被刑事定罪的美国总统-whatsnew.html
@@ -44,7 +44,7 @@ author: 端传媒实习记者 千海﹑郭梓谦
 <figcaption itemprop="caption">2023年4月1日，加利福尼亚州亨廷顿海滩，示威者混进特朗普集会。<span class="credit">摄：Irfan Khan/Los Angeles Times via Getty Images</span></figcaption></figure>
 
 <h2>问四：如果入罪，特朗普还能否参加共和党总统初选，以及2024总统选举？</h2>
-<p>可以。虽然这是前任美国总统被刑事检控的首例，但根据美国宪法，入主总统府的要求仅为“美国出生的公民﹑年满35岁﹑居于美国14年或以上”，所以特朗普不会因为起诉，甚至定罪而被禁止竞选美国总统。理论上他甚至可以在监狱内行驶总统职务。而且，美国国会也不可能从宪法更改对总统的就职要求，如取消某人的参选资格等，即使能够通过，往后也会可能受到联邦最高法院质疑并裁定违宪。</p>
+<p>可以。虽然这是前任美国总统被刑事检控的首例，但根据美国宪法，入主总统府的要求仅为“美国出生的公民﹑年满35岁﹑居于美国14年或以上”，所以特朗普不会因为起诉，甚至定罪而被禁止竞选美国总统。理论上他甚至可以在监狱内行使总统职务。而且，美国国会也不可能从宪法更改对总统的就职要求，如取消某人的参选资格等，即使能够通过，往后也会可能受到联邦最高法院质疑并裁定违宪。</p>
 <p>不过如果特朗普面临控罪，问题就在于他在被告期间进行竞选活动和在美国国内自由拉票的能力。负责特朗普案件的纽约法官会决定特朗普能否在期间进行总统竞选活动，但受《时代杂志》访问的多位美国法律专家，都不认为法院会试图限制他竞选总统。</p>
 <p>因此即使特朗普受到检控，期间仍可如常参选。至于党内初选的程序，暂时未有消息指共和党会如何处理，但目前党内都多指责今次检控属于民主党的政治报复。不过最后若然能够胜出，他就有机会成为美国历来首位面临刑责的候任总统。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230403-international-whatsnew-trump-indictment/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/d888afda3bb142d680b6c5f685ebda9f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年3月25日，美国德克萨斯州，美国前总统特朗普参加他的第一场竞选集会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -54,6 +54,6 @@ author: 端传媒实习记者 千海﹑郭梓谦
 <p>特朗普在2022年11月已宣布将参选2024年的总统选举，寻求第二个总统任期，并在大多数共和党初选民调中领先。美国时间3月31日，雅虎新闻与YouGov公布了在特朗普被起诉后进行的一项问卷调查，发现在共和党候选人中，特朗普以52%支持率领先；而另一名共和党潜在参选人、佛罗里达州州长德桑蒂斯(Ron DeSantis）支持率则为31%。前驻联合国大使妮基‧黑利 (Nikki Haley）支持率为 5% ，前副总统彭斯 (Mike Pence) 为3%。</p>
 <p>这项调查也访问了受访者对于这次起诉事件的看法。有66％受访者认为特朗普肯定或可能有犯法，但只有41％认为他可能会被定罪，23％认为他可能会服刑。而被问及是否同意对特朗普作出起诉时，有42％的美国人表示同意，39％表示不同意，近两成表示不肯定。另外，有43％受访者认为检控带有政治偏见，另外有42％认为检控是单纯针对犯案的举动。</p>
 <p>共和党方面，支持率只在特朗普之后，被外界视为特朗普来年大选对手的德桑蒂斯，就在推特发文称：“将法律制度充当武器，以执行政治目的，完全颠覆了法治。这事不符合美国的作风。”他也在推文中不点名批评检控官曲解法律，并将法律延伸以攻击政治对手。</p>
-<p>特朗普的副手、前副总统彭斯则在转载自己接受CNN的推特上指，“这是因为竞选财务问题的起诉”，既“前所未有”，也“令人愤慨”。甚至在数百万美国人民看来，这只不过是一场“政治起诉”。又在之后的推文上指“美国人民将会目睹这一切，作为政治犯罪化又一例证”。</p>
+<p>特朗普的副手、前副总统彭斯则在转载自己接受CNN访问的推特上指，“这是因为竞选财务问题的起诉”，既“前所未有”，也“令人愤慨”。甚至在数百万美国人民看来，这只不过是一场“政治起诉”。又在之后的推文上指“美国人民将会目睹这一切，作为政治犯罪化又一例证”。</p>
 <p>至于其他共和党人，也一致谴责今次起诉为政治决定。包括联邦众议院议长麦卡锡（Kevin McCarthy）指检控官试图干涉总统选举，对国家造成无法弥补的损害，又称他将司法系统化为武器攻击特朗普。</p>
 <p>另一边厢，美国现任总统、民主党的拜登在当地时间3月31日离开白宫之际，受记者追问时表明，自己不会对特朗普的起诉作出任何评论。</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
