--- a/_posts/2023-04-03-INMEDIA-陳帆獲任港大校委會委員-任期三年.html
+++ b/_posts/2023-04-03-INMEDIA-陳帆獲任港大校委會委員-任期三年.html
@@ -10,5 +10,5 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/20230403cf.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>香港大學網站日前更新校務委員會名單，其中前運輸及房屋局局長陳帆獲委任校外委員，三年任期於3月2日開始，至2026年3月1日結束。</p>
 <p>現年65歲的陳帆畢業於港大，早於1982年已加入政府，2011年曾任機電工程署署長。直至2017年7月獲委任為運輸及房屋局局長，但2022年未能成功過渡至李家超政府。他卸任後擔任香港機電工程商聯會榮譽顧問，以及香港教育大學榮譽教授，去年更成功當選新任港區人大代表。</p>
-<p>現時港大校務委員會共有6名校外委員，除陳帆外，南豐集團行政總裁、上海市政協委員張世成亦同獲委任。《學苑》報導更指，張世成兼任港大科橋有限公司董事，正向校方查詢是否涉及利益衛突。其他校外委員包括骨科及創傷學教授周肇平、信和集團副主席黃永光、經民聯立法會議員吳永嘉及特許會計師施文信。</p>
+<p>現時港大校務委員會共有6名校外委員由校委會委任，除陳帆外，南豐集團行政總裁、上海市政協委員張世成亦同獲委任。《學苑》報導更指，張世成兼任港大科橋有限公司董事，正向校方查詢是否涉及利益衝突。其他校外委員包括骨科及創傷學教授周肇平、信和集團副主席黃永光、經民聯立法會議員吳永嘉及特許會計師施文信。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
