--- a/_posts/2023-04-04-INITIUM-中国大陆涨价的餐饮-疫情后-你那里喝杯咖啡要多少钱-一分钟数洞.html
+++ b/_posts/2023-04-04-INITIUM-中国大陆涨价的餐饮-疫情后-你那里喝杯咖啡要多少钱-一分钟数洞.html
@@ -5,11 +5,11 @@ date: 2023-04-04 00:02:00.000000000 +00:00
 link: https://theinitium.com/article/20230404-mainland-dataphile-what-can-buy-100yuan/
 categories: initium
 tags: blog
-author: 端传媒记者 苑悠 发自新加坡
+author: 端传媒记者 苑悠 实习记者 王梓烨 发自新加坡
 ---
 
-<p>「麦当劳“穷鬼套餐”涨价15.8%，而2022年除第一季度外，中国大陆城镇人均可支配收入同比增长徘徊于2%上下。」</p><p>端传媒记者 苑悠 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230404-mainland-dataphile-what-can-buy-100yuan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/2669e63d337849369b6033a47b8d585d.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>“一分钟数洞”将有趣﹑有用的数据和资料，以易懂又好读的方式呈现给读者。请按此<a href="https://www.foodtalks.cn/news/31878">订阅</a>数洞栏目。</small></p>
+<p>「麦当劳“穷鬼套餐”涨价15.8%，而2022年除第一季度外，中国大陆城镇人均可支配收入同比增长徘徊于2%上下。」</p><p>端传媒记者 苑悠 实习记者 王梓烨 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230404-mainland-dataphile-what-can-buy-100yuan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/2669e63d337849369b6033a47b8d585d.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>“一分钟数洞”将有趣﹑有用的数据和资料，以易懂又好读的方式呈现给读者。请按此<a href="https://theinitium.com/channel/data/">订阅</a>数洞栏目。</small></p>
 <p><b>阅读时长：1分钟</b></p>
 <p>“热干面又涨价了，为什么我的工资还不涨？”一位网民对湖北武汉热干面整体涨价的新闻回应道。<br><br>2023年2月初，有武汉市民发现早餐店的热干面整体涨了0.5至1元，成了6元一份，当地餐饮协会会长回应指是“市场调节行为”，原因一是春节前上调了员工工资，二是上游原材料价格上涨。热干面并非特例，疫情过后，餐饮涨价的信息便浮现于高涨的消费者价格指数（CPI）、接连不断的品牌商提价新闻、与网民出行后在社交媒体的感叹里。<br><br>据中国统计局，2023年1月中国大陆食品价格同比上涨6.2%，其中北京市食品价格随年涨6.6%，并因此触发其价格补贴机制，宣布对符合条件的30万困难群众发放1月价格临时补贴，每人40元。2月，食品价格在数据上涨幅回落，但如西双版纳（5.7%）、海南（5.3%）等部分地区仍维持高位。<br><br>诚然，消费者价格指数的大比例上涨与春节等节假日、疫后旅游业的推动不无关联，但季节性上涨外，因原料、人力成本等大范围的餐饮商品提价，也愈发明显。疫后看起来刚刚如常的日子里，涨价的餐饮给了生活当头第一棒。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230404-mainland-dataphile-what-can-buy-100yuan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/922cc3888c70473a9bebe2db201cc734.png?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
