--- a/_posts/2023-04-04-INMEDIA-易通行下月7日實施-運輸署籲車輛貼直接貼於擋風玻璃.html
+++ b/_posts/2023-04-04-INMEDIA-易通行下月7日實施-運輸署籲車輛貼直接貼於擋風玻璃.html
@@ -13,11 +13,11 @@ author: 獨媒報導
 <p>羅淑佩表示，現時已有77%登記車輸已獲發車輛貼，有62%車主已開立「易通行」戶口，已發出超過61萬個車輛貼。她指，青沙管制區將在5月7日實施「易通行」，下階段將於城門及獅子山隧道實施，及後為3條過海隧道及香港仔隧道和大老山隧道，而實施後不會再有人手繳費亭，呼籲餘下23%未登記戶的車主盡快登記。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2bn76CRZD3" title="無標題"><img src="https://live.staticflickr.com/65535/52792761783_2af0954af9_b.jpg" width="1024" alt="無標題" /></a><br /><em>羅淑佩</em></p>
 <p>羅淑佩亦交代在2月開放予的士司機辦理車輛貼及開通「易通行」的上環林士街及荃灣政府停車場的的士屬服務站，已處理3,800宗的士申請。她公布，將開放該兩個停車場給所有車主預約辦理車輛貼及開設「易通行」戶口，車主同可獲1小時免費泊車。車主亦可透過「易通行」網頁或34資訊站辦理。</p>
-<p><strong>坊間流傳用「靜電貼」免損壞 羅淑佩勸不要便用</strong></p>
+<p><strong>坊間流傳用「靜電貼」免損壞 羅淑佩勸不要使用</strong></p>
 <p>由於車輛貼需以膠紙形式貼在擋風玻璃，為免日後更換擋風玻璃或車輛時撕毀車輛貼須付51元補領，坊間近日流傳可把車輛貼貼在「靜電貼」之上。</p>
 <p>羅淑佩表示，留意網上有一些裝置及「靜電貼」，聲稱可安裝車輛貼在內。但她指，經運輸署測試後，使用「靜電貼」會影響系統偵測，為免為車主造成不便，建議車主直接把車輛貼貼在擋風玻璃。她表示，政府會免費提供首張車輛貼，第二張起需付費，若玻璃損毀或要換車就需要買一張新車輛貼，但她相信不會有很多車主換車。</p>
 <p><strong>無損壞司機卡可退回100元按金</strong></p>
-<p>至於早前有的士業界要求免收120元「商用車司機卡」費用。羅淑表示，如司機離開行業時，司機卡沒有損壞，功能正常，將會退回100元按金，但只限第一張申請的司機卡。</p>
+<p>至於早前有的士業界要求免收120元「商用車司機卡」費用。羅淑佩表示，如司機離開行業時，司機卡沒有損壞，功能正常，將會退回100元按金，但只限第一張申請的司機卡。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/d54PV4212G" title="無標題"><img src="https://live.staticflickr.com/65535/52791758457_142f6c9a69_b.jpg" alt="無標題" /></a></p>
 <p><strong>稱保留人手收費或引起混亂及造成危險</strong></p>
 <p>被問到易通行實施後，會否保留人手收費。羅淑佩表示，若保留人手收費，有司機在最後一刻發現自己沒有易通行，突然切線到有人手收費亭，相信會引起混亂及造成道路危險。</p>
