--- a/_posts/2023-04-04-INMEDIA-前區議員轉職保險-為社區理財-工餘時間-重操舊業-放不下街坊.html
+++ b/_posts/2023-04-04-INMEDIA-前區議員轉職保險-為社區理財-工餘時間-重操舊業-放不下街坊.html
@@ -8,9 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_535.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>（左一）沙田博康邨前區議員趙柱幫；（右一及二）深水埗區議會前主席楊彧、沙田下城門前區議員黃浩峰</em></p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_535.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>（左一）沙田博康邨前區議員趙柱幫；（右一及二）深水埗區議會前主席楊彧、沙田下城門前區議員黃浩鋒</em></p>
 <p><font color="red">（獨媒報導）</font>2021年，香港經歷區議員辭職潮，有人辭任亦有人「被辭任」，流離失散。有人選擇開店團購「做老闆」、有人選擇開書店宣傳閱讀、亦有人選擇走上截然不同的路，投身保險「為社區理財」。</p>
-<p>深水埗區議會前主席楊彧、沙田博康邨前區議員趙柱幫及沙田下城門前區議員黃浩峰，組成「社區理財團隊」，主打強積金服務，他們更如過往般在街頭開設街站。三人發現，不少街坊在在相關方面遇上困難，如不清楚僱主有沒有為自己處理強積金供款、追討強積金欠款等，「其實理財都好貼近地區。」</p>
+<p>深水埗區議會前主席楊彧、沙田博康邨前區議員趙柱幫及沙田下城門前區議員黃浩鋒，組成「社區理財團隊」，主打強積金服務，他們更如過往般在街頭開設街站。三人發現，不少街坊在在相關方面遇上困難，如不清楚僱主有沒有為自己處理強積金供款、追討強積金欠款等，「其實理財都好貼近地區。」</p>
 <p>工作時間夠彈性可繼續服務社區，亦是三人轉跑道的原因之一。身兼正職卻仍心繫社區，有人希望兌現在任時的承諾，直言「唔捨得大家」；有人在社區打滾十年，受街坊依賴難以放下；亦有人從未覺服務社區是「無償」，「係我哋過往嘅工作同表現帶啲回報俾我哋」，街坊只是換了一種形式支持自己，「呢個社區有份造就我」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/J12c05tXqk" title="無標題"><img src="https://live.staticflickr.com/65535/52772501316_0540f51686_z.jpg" alt="無標題" /></a></p>
 <p><strong>辭任後難投社福界：有政治背景嘅人唔適合做</strong></p>
@@ -32,15 +32,15 @@ author: 獨媒報導
 <p>他捲起衫袖，向記者露出兩臂紋身。一手是當年兩屆競選區議員的得票數目；另一手則印有自己的社工註冊編號，以及「夢想」二字。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3mMd945Fv6" title="無標題"><img src="https://live.staticflickr.com/65535/52772984333_6733975e12_z.jpg" alt="無標題" /></a></p>
 <p><strong>被DQ後再無留戀：服務社區不需要Title </strong></p>
-<p>沙田下城門前區議員黃浩峰，從2015年起為時任沙田區議員黃學禮擔任助理。他在2019年正式參選，擊敗「公民力量」唐學良。2021年，政府公佈16名民主派區議員宣誓無效被「DQ」，黃浩峰是其中一人。</p>
-<p>黃浩峰表示，自己從小已熱愛留意政治議題，亦有支持的政治人物。至2011年，他發現民主派在區議會大敗，開始萌生參政的打算，並自2014年起參與並擔任議員助理，累積經驗及等候時機參選。區議員令他著迷之處，除了工作上自由度大，較多與人相處的機會外，更是有機會改變城市規劃，讓街坊意見反映在社區設計上，或是改善巴士路線，使其更貼近社區需求，「一個人好難搵一樣嘢係自己鍾意，有passion」。</p>
-<p>但黃浩峰深知區議員並非穩定工作，「政治環境會變，選民會離職棄你」。一如他所料，改變席捲而來，他丟失工作亦迷失方向。失業後，他曾協助朋友做生意，之後再轉行維修電單車。惟工時過長，體力需求亦大，黃浩峰身體難以負荷。</p>
+<p>沙田下城門前區議員黃浩鋒，從2015年起為時任沙田區議員黃學禮擔任助理。他在2019年正式參選，擊敗「公民力量」唐學良。2021年，政府公佈16名民主派區議員宣誓無效被「DQ」，黃浩鋒是其中一人。</p>
+<p>黃浩鋒表示，自己從小已熱愛留意政治議題，亦有支持的政治人物。至2011年，他發現民主派在區議會大敗，開始萌生參政的打算，並自2014年起參與並擔任議員助理，累積經驗及等候時機參選。區議員令他著迷之處，除了工作上自由度大，較多與人相處的機會外，更是有機會改變城市規劃，讓街坊意見反映在社區設計上，或是改善巴士路線，使其更貼近社區需求，「一個人好難搵一樣嘢係自己鍾意，有passion」。</p>
+<p>但黃浩鋒深知區議員並非穩定工作，「政治環境會變，選民會離職棄你」。一如他所料，改變席捲而來，他丟失工作亦迷失方向。失業後，他曾協助朋友做生意，之後再轉行維修電單車。惟工時過長，體力需求亦大，黃浩鋒身體難以負荷。</p>
 <p>無法忍受「打一世工」的他，在好友趙柱幫多番邀請下決定一試踏入保險業。被問及為何不嘗試自己開店，他直言自己與連鎖商店比並無優勢，加上看見不少昔日同行「做到損手爛腳收場」，認為做生意非自己專長。加入保險業後，他一星期可以抽出數日時間擺見見街坊、籌辦旅行團、擺擺街站，「有少少搵返以前（區議員）做嘢嘅感覺，服務街坊都唔需要一個title（名銜）」。</p>
 <p>被問及會否考慮再做區議員，他則回答得斬釘截鐵，「喺而家呢個政治環境，我係唔會考慮做區議員，冇意思㗎嘛，你講句嘢都唔得。」失去議員身份，服務街坊時會否有落差？他卻不以為然，認為在任時亦一樣無力，「一開始話政治野唔准講，後來沙田有啲嘢唔准講，到宜家乜都係唔准講嘅嘢，可以提出意見嘅空間越來越少。」到被DQ時，「已經係無咩可以做到。」他對區議員一職亦不再留戀。</p>
 <p>比起工作內容，他覺得與他人相處更像他的興趣，不論「做區」還是任職保險後遇到的客戶都一樣。現時處理保單索償，亦需要接觸不同公司或客戶溝通磋商解釋，和擔任區議員是一樣倚賴溝通技巧，「雖然個語言唔同咗，出糧方法都唔同咗嘅」。他自言對目前的狀態感到滿足，「當你有興趣嘅時候你就會唔覺意用咗時間落去，而嗰啲時間你唔會覺得係一個代價。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/JS72r4VL78" title="無標題"><img src="https://live.staticflickr.com/65535/52772757479_f4333aafc1_z.jpg" alt="無標題" /></a></p>
 <p><strong>世事難料 服務社區總有盡頭：到時可能完成使命</strong></p>
 <p>三人現時以「社區理財團隊」「落區」，間中擺設實體街站宣傳強積金知識。最先加入宏利的楊彧表示，目前仍在招攬人手，相信辭任區議員擁有人脈和溝通技巧，可勝任保險一職，他亦知道不少人都未找到方向，希望有更多昔日同行加入。<br />
-工作以外，還要無償服務社區，旁人看來似是身兼兩份正職，三人卻未覺勞累。黃浩峰認為，自己在任時的承諾未全部兌現，又直言自己「唔捨得大家（街坊）」，「有好多嘢我應承咗街坊但都未做，希望之後可以用市民嘅身份睇吓做到啲咩」；受街坊依賴的楊彧在離開社區後，經常想起「啲街坊等緊你」。趙柱幫則認為，「無償」一字並不貼切，「呢個社區都有份造就我」。</p>
+工作以外，還要無償服務社區，旁人看來似是身兼兩份正職，三人卻未覺勞累。黃浩鋒認為，自己在任時的承諾未全部兌現，又直言自己「唔捨得大家（街坊）」，「有好多嘢我應承咗街坊但都未做，希望之後可以用市民嘅身份睇吓做到啲咩」；受街坊依賴的楊彧在離開社區後，經常想起「啲街坊等緊你」。趙柱幫則認為，「無償」一字並不貼切，「呢個社區都有份造就我」。</p>
 <p>突如其來面對「失業」，三人都意識到凡事無絕對，現時邊工作邊照顧社區的日子亦或會有盡頭。趙柱幫的文具店數度被投訴，他因提供會見居民服務俾房屋署警告，及後更「大舖搬細舖」兼需改名。楊彧在伍月蘭議員辦事處「暫住」，但對方任期一到同樣要離場。最快或明年失去與街坊見面的地點。他苦笑稱，「冇埋呢個辦事處嘅話，到時可能真係完咗自己嘅使命。」</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
