--- a/_posts/2023-04-05-INMEDIA-鄧家彪-市民-誤會-ngo自資營運-綠在區區-促大字標明特區資助.html
+++ b/_posts/2023-04-05-INMEDIA-鄧家彪-市民-誤會-ngo自資營運-綠在區區-促大字標明特區資助.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/04051227-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>立法會一個委員會昨日討論斥1.1億，於安達臣道興建垃圾站及「綠在區區」回收便利點大樓。工聯會鄧家彪指有市民「誤會」「綠在區區」是非牟利機構「自己做好事」，建議政府在全港「綠在區區」招牌大字印上「中華人民共和國香港特別行政區全額資助」。</p>
-<p>昨日（4 4日）立法會食物安全及環境衞生事務委員會，討論於西貢安達臣道石礦場用地興建同時設有垃圾收集站及「綠在區區」回收便利點的聯用大樓。目前全港各區「綠在區區」由環境保護署全資，招標不同非政府機構營運。</p>
+<p>昨日（4月4日）立法會食物安全及環境衞生事務委員會，討論於西貢安達臣道石礦場用地興建同時設有垃圾收集站及「綠在區區」回收便利點的聯用大樓。目前全港各區「綠在區區」由環境保護署全資，招標不同非政府機構營運。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/76W3mbYr0q" title="DSC_5084"><img src="https://live.staticflickr.com/65535/52792552581_5a27df77d3_b.jpg" width="1024" alt="DSC_5084" /></a><br /><em>鄧家彪</em></p>
 <p><strong>鄧家彪指市民誤會「NGO自己做好事」</strong></p>
 <p>鄧家彪稱，政府委託非牟利機構經營「綠在區區」，「久而久之有啲市民真係覺得，係NGO自己做好事，特區政府環保冇乜盡力。」要求「綠在區區」營運點招牌上「大大隻字寫清楚『中華人民共和國香港特別行政區全額資助』」，「想個社會，包括每一個市民明白，睇落去做緊一啲好嘅事，其實係政府政策支持、資金支持。」</p>
