--- a/_posts/2023-04-04-INITIUM-埃文-格什科维奇-热爱俄罗斯-却在俄被拘的-华尔街日报-记者.html
+++ b/_posts/2023-04-04-INITIUM-埃文-格什科维奇-热爱俄罗斯-却在俄被拘的-华尔街日报-记者.html
@@ -59,7 +59,7 @@ author: 华尔街日报
 <p>那人停顿了一下，然后回道：“但英语不是其中之一。”</p>
 <p>他想，随著美国领导的制裁限制了俄罗斯经济中与西方关联最紧密的部分，莫斯科如今给人的感觉越来越像混乱和犯罪阴影下的90年代。他连续几小时与同事、朋友和线人讨论如何报导一个与邻国交战的国家，常常聊到深夜。他思考著报导俄罗斯利用美国囚犯作为谈判筹码的问题。</p>
 <p>“这是一个持续的道德危机。你会讨论每一个故事，”《金融时报》记者、格什科维奇的朋友波琳娜·伊万诺娃(Polina Ivanova)说。“埃文会谈论……报导俄罗斯而不是乌克兰意味著什么。这是一个非常难想清楚的事，以及就你的身份认同而言，你在其中的位置。”</p>
-<p>在一次报导任务中，格什科维奇先生被几名俄罗斯安全人员跟踪，其中一些人用像机记录了他的行踪，并向他的线人施压，让他们别跟他说话。他猜测自己的手机被监控了。在另一次前往普斯科夫西部地区的行程中，他被一些身份不明的人跟踪和拍摄。</p>
+<p>在一次报导任务中，格什科维奇先生被几名俄罗斯安全人员跟踪，其中一些人用相机记录了他的行踪，并向他的线人施压，让他们别跟他说话。他猜测自己的手机被监控了。在另一次前往普斯科夫西部地区的行程中，他被一些身份不明的人跟踪和拍摄。</p>
 <p>上周三，当他前往距离莫斯科以东近1,500公里外的乌拉尔山区城市叶卡捷琳堡时，格什科维奇的手机和许多《华尔街日报》外国记者的手机一样，装了一个GPS跟踪应用，让同事们能够看到他的动向。</p>
 <p>他在下午1点59分写道：“降落，离开机场。”</p>
 <p>托马斯·格罗夫(Thomas Grove)在《华尔街日报》担任驻俄罗斯记者多年，他现在负责报导波兰。他在华沙去参加一个晚餐的路上意识到格什科维奇已经几小时没给他发消息了。他在晚上7点12分给《华尔街日报》一位负责安全的经理发了消息：“你和埃文联系过吗？”</p>
