--- a/_posts/2023-04-06-PQ-國際媒體關注蔡麥會-蔡英文總統籲正視中國威脅.html
+++ b/_posts/2023-04-06-PQ-國際媒體關注蔡麥會-蔡英文總統籲正視中國威脅.html
@@ -16,7 +16,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c819e6ff-截圖-2023-04-06-下午3.03.04-edited.png" alt="" class="wp-image-132019" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c819e6ff-截圖-2023-04-06-下午3.03.04-edited.png 472w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c819e6ff-截圖-2023-04-06-下午3.03.04-edited-300x252.png 300w" sizes="(max-width: 472px) 100vw, 472px" /><figcaption>麥卡錫在與蔡英文的閉門會議後，召開跨黨派記者會。（圖／instagram@speakermccarthy）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c819e6ff-截圖-2023-04-06-下午3.03.04-edited.png" alt="" class="wp-image-132019" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c819e6ff-截圖-2023-04-06-下午3.03.04-edited.png 472w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/c819e6ff-截圖-2023-04-06-下午3.03.04-edited-300x252.png 300w" sizes="(max-width: 472px) 100vw, 472px" /><figcaption>麥卡錫在與蔡英文的閉門會議後，召開跨黨派記者會。（圖／instagram@speakermccarthy）</figcaption></figure></div>
 
 
 
@@ -60,11 +60,11 @@ author: 江 珀石
 
 
 
-<p>《衛報》也指出，在北京迅速擴張的野心下，不僅台灣，印太地區都意識中國威脅，積極加強軍備防範衝突。中共勢力日益增長，包括近 30 年來其國防預算逐漸上升，以及頻繁的軍備競賽，讓全印太地區加強警戒。據瑞典智庫斯德哥爾摩國際和平研究所（Stockholm International Peace Research Institute, SIPRI）提供的數據指出，亞洲及大洋洲地區的國防預算，從原先的 18 ％提升至 28 ％。</p>
+<p>《衛報》也指出，在北京迅速擴張的野心下，不僅台灣，印太地區都意識中國威脅，積極加強軍備防範衝突。中共勢力日益增長，包括近 30 年來其國防預算逐漸上升，以及頻繁的軍備競賽，讓全印太地區加強警戒。據瑞典智庫斯德哥爾摩國際和平研究所（Stockholm International Peace Research Institute, SIPRI）提供的數據指出，亞洲及大洋洲地區的國防預算，從原先的 18％ 提升至 28％。</p>
 
 
 
-<ul class="pqnote"><li>2023 年，中共的國防預算佔 GDP 比例雖低於美國，但比例增加 7.2 ％，達到歷史新高。美國國防部預估，中國實際軍費花費可能是官方數字的 2 倍以上。對此，美國在最近的國防預算中，則優先加強印太地區的軍事儲備，例如 3 月已批准向台灣出售 6.19 億美元的軍武。</li></ul>
+<ul class="pqnote"><li>2023 年，中共的國防預算佔 GDP 比例雖低於美國，但比例增加 7.2％，達到歷史新高。美國國防部預估，中國實際軍費花費可能是官方數字的 2 倍以上。對此，美國在最近的國防預算中，則優先加強印太地區的軍事儲備，例如 3 月已批准向台灣出售 6.19 億美元的軍武。</li></ul>
 
 
 
@@ -72,9 +72,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-1024x683.jpg" alt="" class="wp-image-129876" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv.jpg 1920w" sizes="(max-width: 575px) 100vw, 575px" /><figcaption>美國澳洲英國所組成的AUKUS將進一步合作，以應對印太地區威脅和挑戰　
-圖／President Biden
-@POTUS</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-1024x683.jpg" alt="" class="wp-image-129876" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/03/9918ba69-frjak_qwcaaiiuv.jpg 1920w" sizes="(max-width: 575px) 100vw, 575px" /><figcaption>美國澳洲英國所組成的AUKUS將進一步合作，以應對印太地區威脅和挑戰 <br>圖／President Biden @POTUS</figcaption></figure></div>
 
 
 
